--- a/crowdfunding/templates/index.html
+++ b/crowdfunding/templates/index.html
@@ -1,1 +1,10 @@
-Hello
+{% extends 'base.html' %}
+
+{% block title %} Seja Bemvindo - Página Principal {% endblock %}
+
+
+{% block main %}
+<h1>Hello World</h1>
+
+    {% include 'footer.html' %}
+{% endblock %}
