--- a/crowdfunding/templates/index.html
+++ b/crowdfunding/templates/index.html
@@ -4,7 +4,7 @@
 
 
 {% block main %}
-<h1>Hello World</h1>
+<h1 class="destaque">Hello World</h1>
 
     {% include 'footer.html' %}
 {% endblock %}
