creating pesquisador template

--- a/crowdfunding/core/templates/core/index.html
+++ b/crowdfunding/core/templates/core/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'core/base.html' %}
 
 {% block title %} Seja Bemvindo - Página Principal {% endblock %}
 
@@ -6,5 +6,5 @@
 {% block main %}
 <h1 class="destaque">Hello World</h1>
 
-    {% include 'footer.html' %}
+    {% include 'core/footer.html' %}
 {% endblock %}
