template Projetos ok

--- a/crowdfunding/core/templates/core/lista_projetos.html
+++ b/crowdfunding/core/templates/core/lista_projetos.html
@@ -5,3 +5,11 @@
     <li> {{projeto}}</li>
 {% endfor %}
 </ul>
+
+<form action="{% url 'core_projeto_novo' %}" method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+
+    <button type="submit">Cadastrar</button>
+
+</form>
