descadastrar pesq. ok

--- a/crowdfunding/core/templates/core/update_pesquisador.html
+++ b/crowdfunding/core/templates/core/update_pesquisador.html
@@ -8,3 +8,5 @@
     <button type="submit">Salvar</button>
 
 </form>
+
+<a href="{% url 'core_pesquisador_delete' pesquisador.id %}">Descadastrar-se</a>
