--- a/crowdfunding/core/templates/core/lista_instituicoes.html
+++ b/crowdfunding/core/templates/core/lista_instituicoes.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2>Lista de instituicoes</h2>
 
 <ul>
@@ -5,3 +9,5 @@
     <li> { instituicao}}</li>
 {% endfor %}
 </ul>
+
+{% endblock %}
