--- a/crowdfunding/core/templates/core/update_projeto.html
+++ b/crowdfunding/core/templates/core/update_projeto.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2>Atualizando Projeto: {{ projeto }}</h2>
 
 
@@ -11,3 +15,5 @@
 
 
 <a href="{% url 'core_projeto_delete' projeto.id %}">Deletar</a>
+
+{% endblock %}
