--- a/crowdfunding/core/templates/core/delete_confirm.html
+++ b/crowdfunding/core/templates/core/delete_confirm.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2> Tem certeza que deseja deletar {{ obj }} ?</h2>
 
 
@@ -6,3 +10,5 @@
     <button type="submit">Deletar</button>
 
 </form>
+
+{% endblock %}
