--- a/crowdfunding/core/templates/core/lista_projetos.html
+++ b/crowdfunding/core/templates/core/lista_projetos.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block main %}
+
 <h2>Lista de Projetos</h2>
 
 <ul>
@@ -15,3 +19,5 @@
     <button type="submit">Cadastrar</button>
 
 </form>
+
+{% endblock %}
