applies btp forall

--- a/crowdfunding/core/templates/core/delete_confirm.html
+++ b/crowdfunding/core/templates/core/delete_confirm.html
@@ -7,7 +7,7 @@
 
 <form method="POST">
     {% csrf_token %}
-    <button type="submit">Deletar</button>
+    <button type="submit"class="btn btn-danger">Deletar</button>
 
 </form>
 
