--- a/crowdfunding/core/templates/core/lista_pesquisadores.html
+++ b/crowdfunding/core/templates/core/lista_pesquisadores.html
@@ -1,23 +1,34 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 {% block main %}
 
-    <h2>Lista de Pesquisadores</h2>
+    <div class="row">
+        <div class="col-sm-12">
+            <h2>Lista de Pesquisadores</h2>
+        </div>
+    </div>
 
-    <ul>
-    {% for pesquisador in pesquisadores %}
-        <li>
-            <a href="{% url 'core_pesquisador_update' pesquisador.id %}"> {{pesquisador.nome }} </a>
-        </li>
-    {% endfor %}
-    </ul>
+    <div class="row">
+        <div class="col-sm-6">
+            <ul>
+                {% for pesquisador in pesquisadores %}
+                    <li>
+                        <a href="{% url 'core_pesquisador_update' pesquisador.id %}"> {{pesquisador.nome }} </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
 
-    <form action="{% url 'core_pesquisador_novo' %}" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
+        <div class="col-sm-6">
+            <form action="{% url 'core_pesquisador_novo' %}" method="POST">
 
-        <button type="submit" class="btn btn-primary" >Cadastrar</button>
+                {% csrf_token %}
+                {{ form|bootstrap }}
+                <button type="submit" class="btn btn-primary" >Cadastrar</button>
 
-    </form>
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
