--- a/crowdfunding/core/templates/core/lista_projetos.html
+++ b/crowdfunding/core/templates/core/lista_projetos.html
@@ -1,23 +1,33 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 {% block main %}
 
-<h2>Lista de Projetos</h2>
+    <div class="row">
+        <div class="col-sm-12">
+            <h2>Lista de Projetos</h2>
+        </div>
+    </div>
 
-<ul>
-{% for projeto in projetos %}
-    <li>
-        <a href="{% url 'core_projeto_update' projeto.id %}"> {{projeto.titulo }} </a>
-    </li>
-{% endfor %}
-</ul>
+    <div class="row">
+        <div class="col-sm-6">
+            <ul>
+                {% for projeto in projetos %}
+                    <li>
+                        <a href="{% url 'core_projeto_update' projeto.id %}"> {{projeto.titulo }} </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
 
-<form action="{% url 'core_projeto_novo' %}" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
+        <div class="col-sm-6">
+            <form action="{% url 'core_projeto_novo' %}" method="POST">
 
-    <button type="submit">Cadastrar</button>
-
-</form>
+                {% csrf_token %}
+                {{ form|bootstrap }}
+                <button type="submit" class="btn btn-primary" >Cadastrar</button>
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
