--- a/crowdfunding/core/templates/core/update_projeto.html
+++ b/crowdfunding/core/templates/core/update_projeto.html
@@ -1,19 +1,20 @@
 {% extends 'base.html' %}
+{% load bootstrap %}
 
 {% block main %}
 
-<h2>Atualizando Projeto: {{ projeto }}</h2>
+    <div class="row">
+        <div class="col">
+            <h2>Atualizando Projeto: {{ projeto }}</h2>
 
+            <form action="{% url 'core_projeto_update' projeto.id %}" method="POST">
+                {% csrf_token %}
+                {{ form|bootstrap }}
 
-<form action="{% url 'core_projeto_update' projeto.id %}" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-
-    <button type="submit">Salvar</button>
-
-</form>
-
-
-<a href="{% url 'core_projeto_delete' projeto.id %}">Deletar</a>
+                <button type="submit" class="btn btn-primary">Salvar</button>
+                <a href="{% url 'core_projeto_delete' projeto.id %}" class="btn btn-danger">Deletar</a>
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
