adds menu to base

--- a/crowdfunding/core/templates/core/update_projeto.html
+++ b/crowdfunding/core/templates/core/update_projeto.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
 
+{% block title %} Atualizando Projeto {% endblock %}
+
+
 {% block main %}
 
     <div class="row">
