--- a/crowdfunding/core/templates/core/index.html
+++ b/crowdfunding/core/templates/core/index.html
@@ -1,10 +1,32 @@
-{% extends 'core/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %} Seja Bemvindo - Página Principal {% endblock %}
 
+{% block menu %}
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link active" href="{% url 'core_home' %}">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+    </ul>
+{% endblock %}
+
 
 {% block main %}
-<h1 class="destaque">Hello World</h1>
 
-    {% include 'core/footer.html' %}
+<div class="row">
+    <div class="col">
+        <h1>Conectando a sua empresa com centenas de pesquisadores brasileiros</h1>
+    </div>
+</div>
+
+{% include 'core/footer.html' %}
 {% endblock %}
