--- a/crowdfunding/core/templates/core/lista_pesquisadores.html
+++ b/crowdfunding/core/templates/core/lista_pesquisadores.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
 
+{% block title %} Lista de Pesquisadores {% endblock %}
+
+
 {% block main %}
 
     <div class="row">
