--- a/crowdfunding/core/templates/core/lista_projetos.html
+++ b/crowdfunding/core/templates/core/lista_projetos.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
 
+{% block title %} Lista de Projetos {% endblock %}
+
+
 {% block main %}
 
     <div class="row">
