--- a/crowdfunding/core/templates/core/update_pesquisador.html
+++ b/crowdfunding/core/templates/core/update_pesquisador.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
 
+{% block title %} Atualizando Pesquisador {% endblock %}
+
+
 {% block main %}
 
     <div class="row">
